<resources>
    <string name="app_name">Gurmat Jeevan Jaach</string>
    <string name="home">Home</string>
    <string name="audio">Audio</string>
    <string name="swagam">Samagam</string>
    <string name="more">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text">Text</string>
    <string name="samagam">Upcoming Samagam</string>
    <string name="More">More</string>
    <string name="youtube">Youtube</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="telegram">Telegram</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="connect_with_us">Connect With Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="india">India</string>
    <string name="canada">Canada</string>
    <string name="requestForSamagam">Request for Samagam</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="enter_your_name"><font size="15">Name:</font></string>
    <string name="address"><font size="15">Address:</font></string>
    <string name="programDescription"><font size="15">Program Description:</font></string>
    <string name="google_map_link"><font size="15">Google Map Link:</font></string>
    <string name="contact_number"><font size="15">Contact Number:</font></string>
    <string name="your_email"><font size="15">E-Mail:</font></string>
    <string name="start_date"><font size="15">Start Date:</font></string>
    <string name="end_date"><font size="15">End Date:</font></string>
    <string name="request_samagam">Send Request</string>
    <string name="to_date"><font size="15">End Date:</font></string>
    <string name="addSamagamRequest">Add Samagam Request</string>
    <string name="youtube_channels">Youtube Channels</string>
    <string name="whatsapp_group">Whatsapp Group</string>
    <string name="telegram_channels">Telegram Channels</string>
    <string name="facebook_groups">Facebook Groups</string>
    <string name="instagram_chanels">Instagram Channels</string>
    <string name="enter_program_description">Enter Program Description</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="end_date_start_date_validation">Enter Start or End Date</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="data_not_found">No Data Found</string>
    <string name="listen">Listen</string>
    <string name="view_samagam">View Samagam</string>
    <string name="change_language">Change Language</string>
    <string name="month_1">January</string>
    <string name="month_2">February</string>
    <string name="month_3">March</string>
    <string name="month_4">April</string>
    <string name="month_5">May</string>
    <string name="month_6">June</string>
    <string name="month_7">July</string>
    <string name="month_8">August</string>
    <string name="month_9">September</string>
    <string name="month_10">October</string>
    <string name="month_11">November</string>

    <string-array name="month_names_full">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string name="privacy_policy_url">https://www.gurmatjeevanjaach.com/privacy-policy/</string>
    <string name="month_12">December</string>
    <string name="join">Join</string>
    <string name="defaultTime">00:00 am</string>
    <string name="samagam_detail">Details</string>
    <string name="zoom">Zoom</string>
    <string name="live">Live</string>
    <string name="zoom_live">Zoom Live</string>
    <string name="click_to_view_live">Click to view location on the map</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="punjabi">Punjabi</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="click_for_more_info">Click for more information</string>
</resources>